--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "jsonschema>=4.17.3",
     "openinference-instrumentation-autogen>=0.1.9",
     "openinference-instrumentation-openai>=0.1.28",
+    "prompt-toolkit>=3.0.51",
     "pylint>=3.3.7",
     "pyproject-toml>=0.1.0",
 ]
