--- a/update_manifest_config.json
+++ b/update_manifest_config.json
@@ -13,6 +13,12 @@
       "temperature": 0.7
     }
   },
+  "logging": {
+    "level": "DEBUG",
+    "format": "%(asctime)s - %(name)s - %(levelname)s - %(message)s",
+    "file": "update_manifest.log",
+    "console": true
+  },
   "agents": {
     "creator": {
       "name": "creator",
