--- a/update_manifest.json
+++ b/update_manifest.json
@@ -22,10 +22,38 @@
             "description": "Developer guide for the logging system"
         }
     ],
+    "agents": {
+        "CoordinatorAgent": {
+            "description": "Coordinates the workflow between agents",
+            "system_message": "You are a coordinator agent. Your role is to manage the workflow between different agents. You should instruct the FileReaderAgent to read files in a logical order, and ensure that the ManifestUpdaterAgent, LoggingConfigAgent, and ValidationAgent work together effectively. Your goal is to update the manifest files with proper logging configuration and system structure."
+        },
+        "FileReaderAgent": {
+            "description": "Reads and processes input files",
+            "system_message": "You are a file reader agent. Your role is to read and process input files as instructed by the CoordinatorAgent. You should read files in the order specified and provide their contents to other agents."
+        },
+        "ManifestUpdaterAgent": {
+            "description": "Updates manifest files",
+            "system_message": "You are a manifest updater agent. Your role is to update the manifest files with the latest configuration and structure. You should ensure all changes are properly documented and validated."
+        },
+        "LoggingConfigAgent": {
+            "description": "Configures logging system",
+            "system_message": "You are a logging configuration agent. Your role is to set up and maintain the logging system. You should ensure proper log rotation, formatting, and categorization."
+        },
+        "ValidationAgent": {
+            "description": "Validates manifest and logging configuration",
+            "system_message": "You are a validation agent. Your role is to validate the manifest files and logging configuration. You should check for consistency, completeness, and proper structure."
+        }
+    },
     "output_files": {
         "updated_manifest": "manifest.json",
         "logging_config": "logging_config.json",
         "logging_guide": "LOGGING.md"
+    },
+    "logging": {
+        "level": "INFO",
+        "format": "%(asctime)s - %(name)s - %(levelname)s - %(message)s",
+        "file": "update_manifest.log",
+        "console": true
     },
     "llm_config": {
         "model": "gpt-4",
@@ -53,12 +81,8 @@
     },
     "cache": {
         "enabled": true,
-        "ttl": 3600,
         "max_size": 100,
-        "storage": {
-            "type": "memory",
-            "persistent": false
-        }
+        "ttl": 3600
     },
     "api": {
         "timeout": 30,
@@ -71,129 +95,9 @@
         "cache_hit_ratio_threshold": 0.5,
         "memory_usage_threshold": 80
     },
-    "logging": {
-        "base_config": {
-            "level": "DEBUG",
-            "format": "%(asctime)s [%(levelname)s] %(name)s - %(message)s",
-            "console": true,
-            "file_rotation": {
-                "enabled": true,
-                "max_size_mb": 10,
-                "backup_count": 5
-            }
-        },
-        "categories": {
-            "agent_communication": {
-                "level": "DEBUG",
-                "format": "%(asctime)s [AGENT] %(name)s -> %(target)s: %(message)s"
-            },
-            "agent_state": {
-                "level": "DEBUG",
-                "format": "%(asctime)s [STATE] %(name)s: %(state)s - %(details)s"
-            },
-            "performance": {
-                "level": "DEBUG",
-                "format": "%(asctime)s [PERF] %(name)s: %(metric)s = %(value)s %(unit)s"
-            },
-            "error": {
-                "level": "DEBUG",
-                "format": "%(asctime)s [ERROR] %(name)s: %(error_type)s - %(message)s\nStack: %(stack_trace)s"
-            },
-            "manifest": {
-                "level": "DEBUG",
-                "format": "%(asctime)s [MANIFEST] %(operation)s: %(details)s"
-            },
-            "system": {
-                "level": "DEBUG",
-                "format": "%(asctime)s [SYSTEM] %(component)s: %(message)s"
-            }
-        },
-        "programs": {
-            "toy_example": {
-                "log_dir": "logs/toy_example",
-                "main_log": "toy_example.log",
-                "enabled_categories": [
-                    "agent_communication",
-                    "agent_state",
-                    "performance",
-                    "error",
-                    "system"
-                ],
-                "category_files": {
-                    "agent_communication": "toy_example_agent_comm.log",
-                    "agent_state": "toy_example_agent_state.log",
-                    "performance": "toy_example_performance.log",
-                    "error": "toy_example_error.log",
-                    "system": "toy_example_system.log"
-                }
-            },
-            "update_manifest": {
-                "log_dir": "logs/update_manifest",
-                "main_log": "update_manifest.log",
-                "enabled_categories": [
-                    "manifest",
-                    "performance",
-                    "error",
-                    "system"
-                ],
-                "category_files": {
-                    "manifest": "update_manifest_operations.log",
-                    "performance": "update_manifest_performance.log",
-                    "error": "update_manifest_error.log",
-                    "system": "update_manifest_system.log"
-                }
-            }
-        },
-        "filters": {
-            "exclude_patterns": [
-                "password",
-                "api_key",
-                "secret"
-            ],
-            "include_patterns": [
-                "debug",
-                "info",
-                "warning",
-                "error",
-                "critical"
-            ]
-        },
-        "handlers": {
-            "console": {
-                "enabled": true,
-                "colorize": true,
-                "level": "DEBUG"
-            },
-            "file": {
-                "enabled": true,
-                "level": "DEBUG",
-                "encoding": "utf-8"
-            },
-            "email": {
-                "enabled": false,
-                "level": "ERROR",
-                "smtp_server": "smtp.example.com",
-                "from_addr": "system@example.com",
-                "to_addrs": ["admin@example.com"]
-            }
-        },
-        "formatters": {
-            "default": {
-                "format": "%(asctime)s [%(levelname)s] %(name)s - %(message)s",
-                "datefmt": "%Y-%m-%d %H:%M:%S"
-            },
-            "detailed": {
-                "format": "%(asctime)s [%(levelname)s] %(name)s - %(message)s\nFile: %(pathname)s:%(lineno)d\nFunction: %(funcName)s",
-                "datefmt": "%Y-%m-%d %H:%M:%S"
-            }
-        },
-        "developer_notes": {
-            "agent_communication": "Logs de comunicação entre agentes. Útil para entender o fluxo de dados e decisões.",
-            "agent_state": "Logs de mudanças de estado dos agentes. Ajuda a debugar o comportamento dos agentes.",
-            "performance": "Métricas de performance. Use para identificar gargalos e otimizações.",
-            "error": "Logs de erro detalhados com stack trace. Essencial para debugging.",
-            "manifest": "Logs de operações no manifest. Ajuda a rastrear mudanças e validações.",
-            "system": "Logs gerais do sistema. Inclui inicialização, configuração e eventos importantes."
-        }
+    "max_iterations": 3,
+    "analytics": {
+        "enabled": true,
+        "metrics": ["performance", "usage", "errors"]
     }
 } 
