--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,5 @@ dependencies = [
     "prompt-toolkit>=3.0.51",
     "pylint>=3.3.7",
     "pyproject-toml>=0.1.0",
+    "python-multipart>=0.0.20",
 ]
