--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 autogen_agentchat
 jsonschema>=4.17.3
 numpy>=1.21.0
-scikit-learn>=1.0.0 
+scikit-learn>=1.0.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
+python-dotenv>=1.0.0
+pydantic>=2.0.0
+python-multipart>=0.0.5 
