--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,12 @@ dependencies = [
     "autogen-agentchat>=0.5.6",
     "autogen-ext[openai]>=0.5.6",
     "jsonschema>=4.17.3",
+    "nltk>=3.9.1",
     "openinference-instrumentation-autogen>=0.1.9",
     "openinference-instrumentation-openai>=0.1.28",
     "prompt-toolkit>=3.0.51",
     "pylint>=3.3.7",
     "pyproject-toml>=0.1.0",
     "python-multipart>=0.0.20",
+    "scikit-learn>=1.6.1",
 ]
