--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "prompt-toolkit>=3.0.51",
     "pylint>=3.3.7",
     "pyproject-toml>=0.1.0",
+    "pytest-asyncio>=0.26.0",
     "pytest>=8.3.5",
     "python-multipart>=0.0.20",
     "scikit-learn>=1.6.1",
