--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pyproject-toml>=0.1.0",
     "pytest-asyncio>=0.26.0",
     "pytest>=8.3.5",
+    "python-dotenv>=1.1.0",
     "python-multipart>=0.0.20",
     "scikit-learn>=1.6.1",
 ]
