After some changes 1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "scikit-learn>=1.6.1",
 ]
+
+[tool.ruff]
+[tool.ruff.lint]
+ignore = ["F401"]
