--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,10 @@
     {
       "filename": "Agentes_Inteligência_Artificial.txt",
       "path": "/Users/lorenzo/Sync/Source/AI/autogen/text/Agentes_Inteligência_Artificial.txt",
-      "description": "O arquivo discute a evolução da inteligência artificial para agentes de IA, detalhando suas características, capacidades, aplicações e desafios, e enfatiza a importância de se adaptar a essa nova onda de automação inteligente.",
+      "description": "O arquivo discute a evolução da inteligência artificial, com foco nos agentes de IA, suas características, usos e desafios, além de sua importância estratégica para as empresas e profissionais de TI.",
       "status": "okay",
       "metadata": {
-        "summary": "O arquivo começa destacando a evolução da inteligência artificial de Modelos de Linguagem de Grande Escala (LLMs) para agentes de IA, que são sistemas ativos capazes de executar tarefas complexas com autonomia. Os agentes de IA são diferenciados dos LLMs por sua capacidade de planejamento, tomada de decisão e utilização de ferramentas externas.",
+        "summary": "O texto aborda a evolução da inteligência artificial, destacando a transição de Modelos de Linguagem de Grande Escala (LLMs) para agentes de IA, que são sistemas ativos capazes de executar tarefas complexas com autonomia. Os agentes de IA são diferentes dos LLMs, pois possuem capacidade de planejamento, tomada de decisão e utilização de ferramentas externas. A arquitetura de um agente de IA inclui um motor de raciocínio, um sistema de memória, um módulo de planejamento, um conjunto de ferramentas acessíveis via APIs e um executor.",
         "keywords": [
           "ai",
           "text",
@@ -33,10 +33,10 @@
     {
       "filename": "A Revolução_Inteligência_Artificial.txt",
       "path": "/Users/lorenzo/Sync/Source/AI/autogen/text/A Revolução_Inteligência_Artificial.txt",
-      "description": "O arquivo discute a revolução da Inteligência Artificial (IA) com o advento dos Modelos de Linguagem de Grande Escala (LLMs), explicando sua arquitetura, treinamento, desempenho, capacidades, desafios, aplicações e futuro.",
+      "description": "O arquivo discute o impacto e as implicações dos Modelos de Linguagem de Grande Escala (LLMs) na inteligência artificial, descrevendo sua arquitetura, treinamento, desempenho, capacidades, desafios e aplicações futuras.",
       "status": "okay",
       "metadata": {
-        "summary": "O texto aborda a revolução na inteligência artificial (IA) causada pelos Modelos de Linguagem de Grande Escala (LLMs), que são redes neurais treinadas com grandes volumes de texto. Esses modelos, como o GPT da OpenAI e o PaLM do Google, aprendem estatisticamente os padrões da linguagem humana através de um processo chamado aprendizado profundo. A arquitetura fundamental dos LLMs é o Transformer, que permite ao modelo estabelecer conexões contextuais entre palavras distantes dentro de um texto.",
+        "summary": "O arquivo descreve os Modelos de Linguagem de Grande Escala (LLMs) como uma revolução significativa na inteligência artificial, superando as redes neurais. Os LLMs estão transformando processos empresariais e a maneira como interagimos com computadores. Eles são redes neurais treinadas com grandes volumes de texto, aprendendo estatisticamente os padrões da linguagem humana. Modelos como GPT da OpenAI, Claude da Anthropic, PaLM do Google e LLaMA da Meta são exemplos notáveis.",
         "keywords": [
           "ai",
           "text",
@@ -62,10 +62,10 @@
     {
       "filename": "Embeddings_Banco_Vetoriais.txt",
       "path": "/Users/lorenzo/Sync/Source/AI/autogen/text/Embeddings_Banco_Vetoriais.txt",
-      "description": "O arquivo é um texto informativo sobre a importância e aplicação dos embeddings e bancos de dados vetoriais na moderna infraestrutura de inteligência artificial.",
+      "description": "O arquivo discute os fundamentos e aplicações dos embeddings e bancos de dados vetoriais na inteligência artificial moderna.",
       "status": "okay",
       "metadata": {
-        "summary": "O arquivo discute o papel crucial dos embeddings e bancos de dados vetoriais na infraestrutura moderna de inteligência artificial. Os embeddings são representações matemáticas densas de dados brutos (como texto, imagens ou áudio) em espaços vetoriais multidimensionais, que permitem que as máquinas compreendam o significado e as relações entre conceitos de forma similar aos humanos. Eles são essenciais para a tradução de linguagem humana, imagens ou sons para um formato que os computadores possam processar.",
+        "summary": "O arquivo começa explicando que os embeddings são representações matemáticas densas de dados em espaços vetoriais multidimensionais, que permitem que as máquinas compreendam o significado e as relações entre conceitos de maneira semelhante aos humanos. Ele destaca que os embeddings são essenciais para a compreensão da linguagem humana, imagens e sons por computadores, e preservam relações semânticas, permitindo operações algébricas notáveis.",
         "keywords": [
           "ai",
           "text",
@@ -93,7 +93,7 @@
     "statistics": {
       "total_files": 3,
       "total_size": 17535,
-      "last_updated": "2025-05-21T23:08:23.525824+00:00"
+      "last_updated": "2025-05-22T13:01:11.478655+00:00"
     },
     "topics": {},
     "entities": {}
