--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,10 @@
     {
       "filename": "Agentes_Inteligência_Artificial.txt",
       "path": "/Users/lorenzo/Sync/Source/AI/autogen/text/Agentes_Inteligência_Artificial.txt",
-      "description": "O arquivo discute a evolução da inteligência artificial, com foco nos agentes de IA, suas características, usos e desafios, além de sua importância estratégica para as empresas e profissionais de TI.",
+      "description": "O arquivo discute a evolução da inteligência artificial, focando nos agentes de IA, suas características, funcionalidades, aplicações e desafios, além de sua importância para o futuro da automação e colaboração humana.",
       "status": "okay",
       "metadata": {
-        "summary": "O texto aborda a evolução da inteligência artificial, destacando a transição de Modelos de Linguagem de Grande Escala (LLMs) para agentes de IA, que são sistemas ativos capazes de executar tarefas complexas com autonomia. Os agentes de IA são diferentes dos LLMs, pois possuem capacidade de planejamento, tomada de decisão e utilização de ferramentas externas. A arquitetura de um agente de IA inclui um motor de raciocínio, um sistema de memória, um módulo de planejamento, um conjunto de ferramentas acessíveis via APIs e um executor.",
+        "summary": "O arquivo começa destacando a evolução da inteligência artificial (IA), passando de modelos de linguagem passivos para sistemas ativos, conhecidos como agentes de IA. Estes agentes são capazes de executar tarefas complexas com autonomia, diferindo dos Modelos de Linguagem de Grande Escala (LLMs) que são reativos, enquanto os agentes são proativos.",
         "keywords": [
           "ai",
           "text",
@@ -33,10 +33,10 @@
     {
       "filename": "A Revolução_Inteligência_Artificial.txt",
       "path": "/Users/lorenzo/Sync/Source/AI/autogen/text/A Revolução_Inteligência_Artificial.txt",
-      "description": "O arquivo discute o impacto e as implicações dos Modelos de Linguagem de Grande Escala (LLMs) na inteligência artificial, descrevendo sua arquitetura, treinamento, desempenho, capacidades, desafios e aplicações futuras.",
+      "description": "O arquivo discute a revolução da Inteligência Artificial com a introdução dos Modelos de Linguagem de Grande Escala (LLMs), suas capacidades, desafios, implicações para profissionais de TI, e o futuro desses modelos.",
       "status": "okay",
       "metadata": {
-        "summary": "O arquivo descreve os Modelos de Linguagem de Grande Escala (LLMs) como uma revolução significativa na inteligência artificial, superando as redes neurais. Os LLMs estão transformando processos empresariais e a maneira como interagimos com computadores. Eles são redes neurais treinadas com grandes volumes de texto, aprendendo estatisticamente os padrões da linguagem humana. Modelos como GPT da OpenAI, Claude da Anthropic, PaLM do Google e LLaMA da Meta são exemplos notáveis.",
+        "summary": "O arquivo detalha a importância dos Modelos de Linguagem de Grande Escala (LLMs) na evolução da Inteligência Artificial, destacando-os como o maior avanço desde a invenção das redes neurais. Os LLMs são redes neurais treinadas com volumes massivos de texto, capazes de aprender padrões da linguagem humana através do aprendizado profundo. Modelos como GPT, Claude, PaLM e LLaMA são exemplos notáveis.",
         "keywords": [
           "ai",
           "text",
@@ -62,10 +62,10 @@
     {
       "filename": "Embeddings_Banco_Vetoriais.txt",
       "path": "/Users/lorenzo/Sync/Source/AI/autogen/text/Embeddings_Banco_Vetoriais.txt",
-      "description": "O arquivo discute os fundamentos e aplicações dos embeddings e bancos de dados vetoriais na inteligência artificial moderna.",
+      "description": "Este arquivo de texto discute os fundamentos da inteligência artificial moderna, focando em embeddings e bancos de dados vetoriais, seu funcionamento, evolução, desafios e aplicações.",
       "status": "okay",
       "metadata": {
-        "summary": "O arquivo começa explicando que os embeddings são representações matemáticas densas de dados em espaços vetoriais multidimensionais, que permitem que as máquinas compreendam o significado e as relações entre conceitos de maneira semelhante aos humanos. Ele destaca que os embeddings são essenciais para a compreensão da linguagem humana, imagens e sons por computadores, e preservam relações semânticas, permitindo operações algébricas notáveis.",
+        "summary": "O arquivo começa explicando que os embeddings são representações matemáticas densas de dados em espaços vetoriais multidimensionais, usados para transformar dados brutos (como texto, imagens ou áudio) em vetores numéricos, permitindo que as máquinas compreendam o significado e as relações entre conceitos de forma semelhante aos humanos. Os embeddings preservam relações semânticas e permitem operações algébricas complexas.",
         "keywords": [
           "ai",
           "text",
@@ -93,7 +93,7 @@
     "statistics": {
       "total_files": 3,
       "total_size": 17535,
-      "last_updated": "2025-05-22T13:01:11.478655+00:00"
+      "last_updated": "2025-05-22T13:39:34.882906+00:00"
     },
     "topics": {},
     "entities": {}
