--- a/update_manifest_trace.json
+++ b/update_manifest_trace.json
@@ -1,6 +1,6 @@
 {
-  "timestamp": "2025-05-22T13:40:49.869883+00:00",
-  "group_description": "",
+  "timestamp": "2025-05-22T13:55:00.785986+00:00",
+  "group_description": "Update Manifest Multi-Agent Workflow: This group coordinates FileReaderAgent, SummarizerAgent, and ValidatorAgent to build, summarize, and validate a manifest for project files.",
   "agents": {
     "FileReaderAgent": {
       "name": "FileReaderAgent",
@@ -21,72 +21,72 @@
   "stats": {
     "total_actions": 10,
     "agents": [
-      "SummarizerAgent",
       "System",
-      "FileReaderAgent",
-      "ValidatorAgent"
+      "SummarizerAgent",
+      "ValidatorAgent",
+      "FileReaderAgent"
     ]
   },
   "actions": [
     {
-      "timestamp": "2025-05-22T13:39:34.944093+00:00",
+      "timestamp": "2025-05-22T13:53:47.434712+00:00",
       "action_type": "file_read",
       "agent": "FileReaderAgent",
       "file": "/Users/lorenzo/Sync/Source/AI/autogen/text/Agentes_Inteligência_Artificial.txt"
     },
     {
-      "timestamp": "2025-05-22T13:39:58.929927+00:00",
+      "timestamp": "2025-05-22T13:54:13.989022+00:00",
       "action_type": "file_summarized",
       "agent": "SummarizerAgent",
       "file": "/Users/lorenzo/Sync/Source/AI/autogen/text/Agentes_Inteligência_Artificial.txt",
-      "summary": "O arquivo começa destacando a evolução da inteligência artificial (IA), passando de modelos de linguagem passivos para sistemas ativos, conhecidos como agentes de IA. Estes agentes são capazes de executar tarefas complexas com autonomia, diferindo dos Modelos de Linguagem de Grande Escala (LLMs) que são reativos, enquanto os agentes são proativos."
+      "summary": "O arquivo começa destacando a evolução da inteligência artificial (IA), da era dos Modelos de Linguagem de Grande Escala (LLMs) para a era dos agentes de IA. Os agentes de IA são sistemas proativos que podem planejar, tomar decisões e usar ferramentas externas, ao contrário dos LLMs que são sistemas reativos que respondem a prompts e geram texto."
     },
     {
-      "timestamp": "2025-05-22T13:39:58.930981+00:00",
+      "timestamp": "2025-05-22T13:54:13.989631+00:00",
       "action_type": "file_added_to_manifest",
       "agent": "System",
       "file": "/Users/lorenzo/Sync/Source/AI/autogen/text/Agentes_Inteligência_Artificial.txt"
     },
     {
-      "timestamp": "2025-05-22T13:39:58.933515+00:00",
+      "timestamp": "2025-05-22T13:54:13.990142+00:00",
       "action_type": "file_read",
       "agent": "FileReaderAgent",
       "file": "/Users/lorenzo/Sync/Source/AI/autogen/text/A Revolução_Inteligência_Artificial.txt"
     },
     {
-      "timestamp": "2025-05-22T13:40:24.984376+00:00",
+      "timestamp": "2025-05-22T13:54:33.669707+00:00",
       "action_type": "file_summarized",
       "agent": "SummarizerAgent",
       "file": "/Users/lorenzo/Sync/Source/AI/autogen/text/A Revolução_Inteligência_Artificial.txt",
-      "summary": "O arquivo detalha a importância dos Modelos de Linguagem de Grande Escala (LLMs) na evolução da Inteligência Artificial, destacando-os como o maior avanço desde a invenção das redes neurais. Os LLMs são redes neurais treinadas com volumes massivos de texto, capazes de aprender padrões da linguagem humana através do aprendizado profundo. Modelos como GPT, Claude, PaLM e LLaMA são exemplos notáveis."
+      "summary": "O texto descreve os Modelos de Linguagem de Grande Escala (LLMs) como o avanço mais significativo na história da inteligência artificial, transformando processos empresariais e a interação com computadores. Os LLMs são redes neurais treinadas com grandes volumes de texto, aprendendo estatisticamente os padrões da linguagem humana. Modelos como GPT, Claude, PaLM e LLaMA são exemplos destacados."
     },
     {
-      "timestamp": "2025-05-22T13:40:24.985796+00:00",
+      "timestamp": "2025-05-22T13:54:33.681063+00:00",
       "action_type": "file_added_to_manifest",
       "agent": "System",
       "file": "/Users/lorenzo/Sync/Source/AI/autogen/text/A Revolução_Inteligência_Artificial.txt"
     },
     {
-      "timestamp": "2025-05-22T13:40:24.986632+00:00",
+      "timestamp": "2025-05-22T13:54:33.682476+00:00",
       "action_type": "file_read",
       "agent": "FileReaderAgent",
       "file": "/Users/lorenzo/Sync/Source/AI/autogen/text/Embeddings_Banco_Vetoriais.txt"
     },
     {
-      "timestamp": "2025-05-22T13:40:49.853314+00:00",
+      "timestamp": "2025-05-22T13:55:00.773195+00:00",
       "action_type": "file_summarized",
       "agent": "SummarizerAgent",
       "file": "/Users/lorenzo/Sync/Source/AI/autogen/text/Embeddings_Banco_Vetoriais.txt",
-      "summary": "O arquivo começa explicando que os embeddings são representações matemáticas densas de dados em espaços vetoriais multidimensionais, usados para transformar dados brutos (como texto, imagens ou áudio) em vetores numéricos, permitindo que as máquinas compreendam o significado e as relações entre conceitos de forma semelhante aos humanos. Os embeddings preservam relações semânticas e permitem operações algébricas complexas."
+      "summary": "O arquivo começa explicando o conceito de embeddings, que são representações matemáticas densas de dados em espaços vetoriais multidimensionais. Eles são usados para transformar dados brutos, como texto, imagens e áudio, em vetores numéricos, permitindo que as máquinas compreendam o significado e as relações entre conceitos de forma semelhante aos humanos."
     },
     {
-      "timestamp": "2025-05-22T13:40:49.854808+00:00",
+      "timestamp": "2025-05-22T13:55:00.775493+00:00",
       "action_type": "file_added_to_manifest",
       "agent": "System",
       "file": "/Users/lorenzo/Sync/Source/AI/autogen/text/Embeddings_Banco_Vetoriais.txt"
     },
     {
-      "timestamp": "2025-05-22T13:40:49.869464+00:00",
+      "timestamp": "2025-05-22T13:55:00.785810+00:00",
       "action_type": "manifest_validated",
       "agent": "ValidatorAgent",
       "result": true
