--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "arize>=7.40.1",
     "autogen-agentchat>=0.5.6",
     "autogen-ext[openai]>=0.5.6",
+    "chromadb>=1.0.10",
     "jsonschema>=4.17.3",
     "nltk>=3.9.1",
     "openinference-instrumentation-autogen>=0.1.9",
