--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "arize>=7.40.1",
     "autogen-agentchat>=0.5.6",
     "autogen-ext[openai]>=0.5.6",
+    "black>=25.1.0",
     "chromadb>=1.0.10",
     "jsonschema>=4.17.3",
     "nltk>=3.9.1",
@@ -20,10 +21,14 @@ dependencies = [
     "pytest>=8.3.5",
     "python-dotenv>=1.1.0",
     "python-multipart>=0.0.20",
+    "ruff>=0.11.11",
     "scikit-learn>=1.6.1",
 ]
+[tool.black]
+line-length = 88
+target-version = ["py311"]
 
 [tool.ruff]
 [tool.ruff.lint]
 select = ["E", "F"]  # Enables Error and Pyflakes rules
-# ignore = ["F401", "F841"]
+# ignore = ["F401", "F841", "E501"]
