--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "arize>=7.40.1",
+    "autogen",
     "autogen-agentchat>=0.5.6",
     "autogen-ext[openai]>=0.5.6",
     "black>=25.1.0",
@@ -31,4 +32,7 @@ target-version = ["py311"]
 [tool.ruff]
 [tool.ruff.lint]
 select = ["E", "F"]  # Enables Error and Pyflakes rules
+
+[tool.uv.sources]
+autogen = { workspace = true }
 # ignore = ["F401", "F841", "E501"]
